--- a/templates/home_template.html
+++ b/templates/home_template.html
@@ -70,7 +70,7 @@
               </ul>
 
               <div class="menu__logo">
-                <a href="#"><img src="./assets/img/logo.svg" alt=""></a>
+                <a href="#"><img src="{% static 'assets/img/logo.svg' %}" alt=""></a>
               </div>
             </nav>
           </div>
@@ -125,6 +125,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
-<script src="assets/js/nav.js"></script>
+<script src="{% static 'assets/js/nav.js' %}"></script>
 </body>
 </html>
