--- a/homepage/templates/homepage/base.html
+++ b/homepage/templates/homepage/base.html
@@ -25,8 +25,8 @@
         <nav class="col-lg-6">
 			  <ul class="nav__menu">
 			  <li><a href="{% url 'homepage' %}">Home</a></li>
-			  <li><a href="about.html">About us</a></li>
-			  <li><a href="contact.html">Contact us</a></li>
+			  <li><a href="{% url 'about' %}">About us</a></li>
+			  <li><a href="{% url 'contact' %}">Contact us</a></li>
 			  <li><a href="docs.html">Documentation</a></li>
 			</ul>
 		  </nav>
@@ -55,9 +55,9 @@
               </div>
 
               <ul class="mobile__nav__menu">
-                <li><a href="index.html"><b>Home</b></a></li>
-                <li><a href="about.html"><b>About us</b></a></li>
-                <li><a href="contact.html"><b>Contact us</b></a></li>
+                <li><a href="{% url 'homepage' %}"><b>Home</b></a></li>
+                <li><a href="{% url 'about' %}"><b>About us</b></a></li>
+                <li><a href="{% url 'contact' %}"><b>Contact us</b></a></li>
                 <li><a href="docs.html"><b>Documentation</b></a></li>
                 <li><a href="signin1.html"><b>Sign in</b></a></li>
                 <li><a href="signup-1.html"><b>Sign Up</b></a></li>
@@ -99,7 +99,7 @@
           <ul>
             <li><a href="auth.html">Authentication API</a></li>
             <li><a href="#">Models</a></li>
-            <li><a href="faq.html">FAQ</a></li>
+            <li><a href="{% url 'faq' %}">FAQ</a></li>
           </ul>
         </div>
 
@@ -114,8 +114,8 @@
         <div>
           <h6>Explore</h6>
           <ul>
-            <li><a href="contact.html">Contact Us</a></li>
-            <li><a href="about.html">About Us</a></li>
+            <li><a href="{% url 'contact' %}">Contact Us</a></li>
+            <li><a href="{% url 'about' %}">About Us</a></li>
           </ul>
         </div>
       </div>
