Feat: Modified Signin Static page to use template

--- a/templates/homepage/base.html
+++ b/templates/homepage/base.html
@@ -32,7 +32,7 @@
 		  </nav>
 
         <div class="col-lg-4 menu__button__container">
-          <a href="signin1.html" button class="secondary-btn">Sign In</button></a>
+          <a href="{% url 'signin' %}" button class="secondary-btn">Sign In</button></a>
           <a href="signup-1.html"><button class="primary-btn">Sign Up</button></a>
         </div>
 
@@ -59,7 +59,7 @@
                 <li><a href="{% url 'about' %}"><b>About us</b></a></li>
                 <li><a href="{% url 'contact' %}"><b>Contact us</b></a></li>
                 <li><a href="docs.html"><b>Documentation</b></a></li>
-                <li><a href="signin1.html"><b>Sign in</b></a></li>
+                <li><a href="{% url 'signin' %}"><b>Sign in</b></a></li>
                 <li><a href="signup-1.html"><b>Sign Up</b></a></li>
                 <li>
 
