--- a/templates/homepage/faq.html
+++ b/templates/homepage/faq.html
@@ -77,6 +77,11 @@
 				</div>
 			</div>
 		</div>
-	<script type="text/javascript" src="{% static 'js/faq.js' %}"></script>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+	<script src="assets/js/nav.js"></script>
+	<script type="text/javascript" src="{% static 'assets/js/faq.js' %}"></script>
 	</body>
 {% endblock %}
