routed API configure to configure_api page

--- a/templates/user_dashboard/dashboard.html
+++ b/templates/user_dashboard/dashboard.html
@@ -125,10 +125,10 @@
                             </p>
                           </div>
                           <div class="api__box__buttons">
-                            <a href="#"><button class="primary-btn">Configure</button></a>
+                            <a href="{% url 'configure_api' %}"><button class="primary-btn">Configure</button></a>
                             <!-- <input type="radio" name="" id=""> -->
                             <!-- success -->
-                            <div class="pretty p-default p-round p-toggle">
+                            <div class="prindex.htmletty p-default p-round p-toggle">
                               <input type="checkbox" />
                               <div class="state p-success p-on">
                                   <label></label>
