--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -16,7 +16,7 @@
               </div>
               <div class="row dashboard">
                 <div class="col-md-12 text-center dashboard__container">
-                  <img class="dashboard__container__img" src="{% static 'assets/img/Group 645.png' %}" alt="placeholder">
+                  <img class="dashboard__container__img" src="{% static 'img/Group 645.png' %}" alt="placeholder">
                 </div>
               </div>
               <div class="row item-two mt-5">
@@ -55,7 +55,7 @@
                     curate your website, work on them and publish as you please.</p>
                   </div>
                     <div class="item-five__container">
-                    <img class="img-fluid item-five__image-container__img" src="{% static 'assets/img/Group 596.png' %}" alt="placeholder">  
+                    <img class="img-fluid item-five__image-container__img" src="{% static 'img/Group 596.png' %}" alt="placeholder">  
                   </div>
                 </div>      
               </div>
@@ -87,7 +87,7 @@
                       curate your website, work on them and publish as you please.</p>
                   </div>
                     <div class="item-seven__container">
-                      <img class="img-fluid item-five__image-container__img" src="{% static 'assets/img/Group 623.png' %}" alt="placeholder">
+                      <img class="img-fluid item-five__image-container__img" src="{% static 'img/Group 623.png' %}" alt="placeholder">
                     </div>
                   </div>
                 </div>      
@@ -100,16 +100,16 @@
                 </div>
                 <div class="item-ten__image-container">
                 <div>
-                  <a href="#"><img class="img-fluid  item-ten__image-container__img" src="{% static 'assets/img/react-icon.png' %}"></a> 
+                  <a href="#"><img class="img-fluid  item-ten__image-container__img" src="{% static 'img/react-icon.png' %}"></a> 
                 </div>
                 <div>
-                  <a href="#"><assets/ class="img-fluid  item-ten__image-container__img" src="{% static 'assets/img/ember-icon.png' %}"></a>
+                  <a href="#"><img class="img-fluid  item-ten__image-container__img" src="{% static 'img/ember-icon.png' %}"></a>
                 </div>
                 <div>
-                  <a href="#"><img class="img-fluid  item-ten__image-container__img" src="{% static 'assets/img/angular-icon.png' %}"></a>
+                  <a href="#"><img class="img-fluid  item-ten__image-container__img" src="{% static 'img/angular-icon.png' %}"></a>
                 </div>
                 <div>
-                  <a href="#"><img class="img-fluid  item-ten__image-container__img" src="{% static 'assets/img/gatsby-icon.png' %}"></a>
+                  <a href="#"><img class="img-fluid  item-ten__image-container__img" src="{% static 'img/gatsby-icon.png' %}"></a>
                 </div>
               </div>
             </div>
@@ -180,11 +180,5 @@
           </div>
       </section>
     </main>
-
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <script src="{% static 'assets/js/nav.js' %}"></script>
   </body>
 {% endblock %}
