--- a/templates/api_docs/comment_api/docs_base.html
+++ b/templates/api_docs/comment_api/docs_base.html
@@ -9,9 +9,9 @@
   {% load static %}
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
-  <link rel="stylesheet" href="{% static 'assets/css/style.min.css' %}">
+  <link rel="stylesheet" href="{% static 'css/style.min.css' %}">
 
-  <title>Micro Api - {{ template_name }}</title>
+  <title>Micro Api - Comment API</title>
 </head>
 
 <body id="auth">
@@ -23,7 +23,7 @@
     <div class="container">
       <div class="row pt-4 pb-4 header__wrapper">
         <div class="col-lg-2 col-md-6 col-sm-6 logo__container">
-          <a href="{% url 'homepage' %}" class="logo"><img src="{% static 'assets/img/logo.svg' %}" alt="site logo"></a>
+          <a href="{% url 'homepage' %}" class="logo"><img src="{% static 'img/logo.svg' %}" alt="site logo"></a>
         </div>
 
         <nav class="col-lg-6">
@@ -74,7 +74,7 @@
               </ul>
 
               <div class="menu__logo">
-                <a href="#"><img src="{% static 'assets/img/logo.svg' %}" alt=""></a>
+                <a href="#"><img src="{% static 'img/logo.svg' %}" alt=""></a>
               </div>
             </nav>
           </div>
@@ -200,16 +200,11 @@
 
   <!-- Header ends here -->
 
-
+  {% block content %}
+  
+  {% endblock %}
 
   <!-- Normal Page Goes Here -->
-<<<<<<< HEAD:templates/api_docs/docs_base.html
-  {% block content %}
-  {% endblock %}
-  
-=======
-
->>>>>>> c8021a10559e42ed1b23e6f50f2fe69bae1fb806:templates/api docs/docs_base.html
 
   <!-- Normal Page ends Here -->
 
@@ -221,7 +216,7 @@
     <div class="container pt-5 pb-5 footer__wrapper">
       <div class="footer__logo__container">
         <div class="footer__logo">
-          <a href="#"><img src="{% static 'assets/img/logo.svg' %}" alt="footer logo"></a>
+          <a href="#"><img src="{% static 'img/logo.svg' %}" alt="footer logo"></a>
         </div>
       </div>
 
@@ -258,8 +253,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
-  <script src="{% static 'assets/js/nav.js' %}"></script>
-  {{ js_link }}
+  <script src="{% static 'js/nav.js' %}"></script>
+  <script src="{% static 'js/doc.js' %}"></script>
+
 
   </body>
 
