--- a/static/assets/sass/style.scss
+++ b/static/assets/sass/style.scss
@@ -5,7 +5,7 @@
 @import 'pages/index';
 @import 'pages/about';
 @import 'pages/contact';
-@import 'pages/docs';
+@import 'pages/api-endpoints';
 @import 'pages/faq';
 @import 'pages/blogs';
 @import 'pages/index';
