--- a/templates/homepage/base.html
+++ b/templates/homepage/base.html
@@ -27,7 +27,7 @@
 			  <li><a href="{% url 'homepage' %}">Home</a></li>
 			  <li><a href="{% url 'about' %}">About us</a></li>
 			  <li><a href="{% url 'contact' %}">Contact us</a></li>
-			  <li><a href="docs.html">Documentation</a></li>
+			  <li><a href="{% url 'docs' %}">Documentation</a></li>
 			</ul>
 		  </nav>
 
@@ -58,7 +58,7 @@
                 <li><a href="{% url 'homepage' %}"><b>Home</b></a></li>
                 <li><a href="{% url 'about' %}"><b>About us</b></a></li>
                 <li><a href="{% url 'contact' %}"><b>Contact us</b></a></li>
-                <li><a href="docs.html"><b>Documentation</b></a></li>
+                <li><a href="{% url 'docs' %}"><b>Documentation</b></a></li>
                 <li><a href="signin1.html"><b>Sign in</b></a></li>
                 <li><a href="signup-1.html"><b>Sign Up</b></a></li>
                 <li>
