fix:reduced the space between contact address and contact form and masked reference to nigeria in the phone number

--- a/templates/homepage/contact.html
+++ b/templates/homepage/contact.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 {% load static %}
+
 <body id="contact">
 
   <!-- Main body goes here -->
@@ -21,7 +22,7 @@
       </p>
     </div>
     <div
-      class="contact__main row col-lg-8 mx-auto d-flex flex-column-reverse flex-md-row justify-content-around align-items-start">
+      class="contact__main row col-lg-7 col-xl-6 mx-auto d-flex flex-column-reverse flex-md-row justify-content-around align-items-start">
       <div class="contact__details col-12 mt-5 mt-md-0 col-md-5 col-lg-6 px-0">
         <h4>
           We'd love to hear from you
@@ -33,7 +34,7 @@
         <div class="details mb-3">
           <span class="fa fa-phone mr-3"></span>
           <span>
-            <a class="detail__link" href="tel:+2348102557945">+2348102557945</a>
+            <a class="detail__link" href="tel:+2348102557945">(0)-810-255-7945</a>
           </span>
         </div>
         <div class="details mb-3">
