--- a/templates/user_dashboard/configure_api.html
+++ b/templates/user_dashboard/configure_api.html
@@ -3,6 +3,7 @@
 <html lang="en">
 
 <head>
+  {% load static %}
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -12,7 +13,7 @@
   <link rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css">
   <link rel="stylesheet" href=" https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css">
-  <link rel="stylesheet" href="../assets/css/style.min.css">
+  <link rel="stylesheet" href="{% static 'css/style.min.css'%}">
   <title>MicroAPI - Dashboard</title>
 </head>
 
@@ -22,7 +23,7 @@
     <!-- dashboard side bar -->
     <div class="sidebar">
       <div class="sidebar__logo">
-        <a href="../index.html"><img src="../assets/img/logo-alt.svg" alt=""></a>
+        <a href="../index.html"><img src="{% static 'img/logo-alt.svg'%}" alt=""></a>
       </div>
 
       <div class="sidebar__section">
