--- a/static/assets/sass/_layout.scss
+++ b/static/assets/sass/_layout.scss
@@ -1,4 +1,3 @@
-
 //write inside here only
 #layout {
   min-height: 100vh;
@@ -35,8 +34,7 @@ header {
 
     ul {
       display: flex;
-      list-style: none;
-      justify-content: space-between;
+      justify-content: flex-start;
       align-items: center;
       margin: 0em;
       width: 100%;
@@ -82,7 +80,8 @@ header {
       justify-content: space-between;
     }
 
-    nav, .menu__button__container {
+    nav,
+    .menu__button__container {
       display: none;
     }
 
@@ -97,7 +96,7 @@ header {
       width: 50%;
       height: 100%;
       position: static;
-      
+
       .hamburger {
         display: flex;
         flex-direction: column;
@@ -135,7 +134,7 @@ header {
         width: 100%;
         right: 0;
         top: 0;
-        background-color: rgba(0,0,0,.7);
+        background-color: rgba(0, 0, 0, .7);
 
         nav {
           display: flex;
@@ -149,8 +148,13 @@ header {
           position: relative;
 
           @keyframes slide-left {
-            from {transform: translateX(700px);}
-            to {transform: translateX(0px);}
+            from {
+              transform: translateX(700px);
+            }
+
+            to {
+              transform: translateX(0px);
+            }
           }
 
           .search__form {
@@ -209,14 +213,15 @@ header {
               width: 100%;
               padding: 2% 5%;
               // font-weight: 600;
-      
+
               &:hover {
                 border-color: $tetiary-color;
               }
-      
+
               a {
                 text-decoration: none;
-                color: darken($color: $tetiary-color, $amount: 55);;
+                color: darken($color: $tetiary-color, $amount: 55);
+                ;
               }
 
               &:nth-child(5) {
@@ -233,7 +238,7 @@ header {
             align-items: center;
             width: 100%;
             flex-grow: 1;
-            
+
           }
         }
       }
@@ -251,10 +256,11 @@ header {
       .mobile__menu--close {
         animation: 1s linear 0s 1 running fade;
 
-        @keyframes  fade{
+        @keyframes fade {
           from {
-            background-color: rgba(0,0,0,.7);
+            background-color: rgba(0, 0, 0, .7);
           }
+
           to {
             background-color: transparent
           }
@@ -312,9 +318,10 @@ footer {
 
           li {
             margin: 7px 0;
+
             a {
               color: $primary-color;
-              
+
               &:hover {
                 text-decoration: none;
                 color: $theme-color;
