--- a/static/assets/sass/pages/_index.scss
+++ b/static/assets/sass/pages/_index.scss
@@ -77,7 +77,7 @@
   background-color: $tetiary-color;
 .row{
  width:100%;
- margin:4em auto 0em auto;
+ margin:2em auto 0em auto;
  // text-align: justify;
  .heading{
    width: 65%;
@@ -123,7 +123,7 @@
    background-color: $tetiary-color;
  .row{
   width:100%;
-  margin:4em auto 0em auto;
+  margin:2em auto 0em auto;
   // text-align: justify;
   .heading{
     width: 65%;
@@ -264,14 +264,22 @@
 
  
  .item-eleven{
+   input{
+    padding: 0.5em 2.5em;
+    border:0.5px solid gray;
+    outline:none;
+   }
   .started_btn{
-padding: 0.5em 2.5em;
+padding: 0.6em 2.5em;
 background-color: $primary-color;
 text-decoration: none;
 border:none;
 outline:none;
-color:#fff
+color:#fff;
+
+@include tablet{
+ margin-top:0.5em;
   }
  }
  
- 
+}
