--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -69,9 +69,9 @@
               </div>
               <div class="row">
                 <div class=" item-six">
-                  <a href="#"><i class="fa fa-github fa-3x item-six__icon"></i></a>
-                  <a href="#"><i class="fa fa-gitlab fa-3x item-six__icon"></i></a>
-                  <a href="#"><i class="fa fa-bitbucket fa-3x item-six__icon"></i></a>
+                  <a href="#"><i class="fas fa-github fa-3x item-six__icon"></i></a>
+                  <a href="#"><i class="fas fa-gitlab fa-3x item-six__icon"></i></a>
+                  <a href="#"><i class="fas fa-bitbucket fa-3x item-six__icon"></i></a>
                 </div>     
               </div>
             </div>
@@ -157,6 +157,13 @@
                 </div>
                 <div class="col-md-6 item-nine__content">
                   <div class="item-nine__item mb-5">
+                  <h2 class="item-one__header">Email API</h2>
+                  <p class="item-one__text"> Service that let's you set senderID or<br> userID, to enable you identify all the<br> transactions  </p>
+                  <a href="#" class="item-nine__item__link item-one__text">Learn More</a>
+                  </div>
+                </div>
+                <div class="col-md-6 item-nine__content">
+                  <div class="item-nine__item mb-5">
                   <h2 class="item-one__header">User Management</h2>
                   <p class="item-one__text"> Service that let's you set senderID or<br> userID, to enable you identify all the<br> transactions  </p>
                   <a href="#" class="item-nine__item__link item-one__text">Learn More</a>
@@ -170,13 +177,19 @@
                 <div class="row">
                   <div class="col-md-12 mb-5 text-center">
                     <h1 class="mb-5 item-one__header">Make your work seamless</h1>
+                    <input type="text" placeholder="Enter Your email">
                     <button href="#" class="started_btn">Get Started</button>
                     <!-- <a href="#" class="item-nine__button">Get Started</a> -->
                   </div>
+                  <form>
+              
+         
+
                 </div>
               </div>
             </div> 
 
+            
           </div>
       </section>
     </main>
