--- a/static/assets/sass/pages/_faq.scss
+++ b/static/assets/sass/pages/_faq.scss
@@ -14,8 +14,8 @@
 			h1{
 				margin: auto;
 				font-weight:bold;
-				font-size: 72px;
-				line-height: 84px;
+				font-size: 45px;
+				// line-height: 84px;
 				color: $primary-color;
 				overflow: hidden;
 			}
@@ -96,7 +96,7 @@ $breakpoint-phone: 650px;
 	h1{
 		font-size: 40px;
 		font-family: bold;
-		line-height: 70px;
+		// line-height: 70px;
 	}
 		}
 
