--- a/templates/user_dashboard/configure_api.html
+++ b/templates/user_dashboard/configure_api.html
@@ -13,17 +13,17 @@
   <link rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css">
   <link rel="stylesheet" href=" https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <link rel="stylesheet" href="{% static 'css/style.min.css'%}">
   <title>MicroAPI - Dashboard</title>
 </head>
-
 <body>
   <!-- dashbord -->
   <div id="dashboard">
     <!-- dashboard side bar -->
     <div class="sidebar">
       <div class="sidebar__logo">
-        <a href="../index.html"><img src="{% static 'img/logo-alt.svg'%}" alt=""></a>
+        <a href="../index.html"><img src="{% static 'img/logo-alt.svg' %}" alt=""></a>
       </div>
 
       <div class="sidebar__section">
@@ -100,131 +100,120 @@
           <div class="profile_section__pix">Samuel Eze<a><i class="far fa-user"></i></a></div>
         </div>
       </header>
-
-      <div class="dashboard__main">
-        <!-- code goes here-->
-        <div id="configure">
-          <div class="content-parent">
-            <div class="content row">
-              <div class="wide-screen col-md-9">
-                <div class="content-txt">
-                  <h2>Configure Blog Api</h2>
-                  <p>This is a map of user data. It contains sign up information needed from the user before auth</p>
-                </div>
-  
-                <div class="graph">
-                  <h5>API Usage</h5>
-                  <img src="../assets/img/graph.svg" alt="graph">
-                </div>
-  
-                <div class="form">
-                  <form action="">
-                    <label for="apiKey">API Key</label>
-                    <input type="text" placeholder="23pcei3434kef"> <br>
-                    <label for="baseId">Base ID</label>
-                    <input type="text" placeholder="94nfkkeo454nkf">
-                    <br>
-                    <label for="node">Node type</label>
-                    <input type="text" placeholder="Blog API">
-  
-                    <div class="row">
-                      <div class="col-md-4">
-                        <label for="servers">Allowable Servers</label>
-                        <input type="text" placeholder="API Administrators">
-                      </div>
-                      <div class="col-md-4">
-                        <label for="service">Ajax Proxy Service</label>
-                        <input type="text" placeholder="www.domain.com">
-                      </div>
-                      <div class="col-md-4">
-                        <label for="token">API Token</label>
-                        <input type="text" placeholder="Blog API">
-                      </div>
-                    </div>
-  
-                    <div class="row">
-                      <div class="col-md-4">
-                        <label for="Authentication">Authentication</label>
-                        <input type="text" placeholder="Blog API">
-                      </div>
-                      <div class="col-md-4">
-                        <label for="Porthost">Port host</label>
-                        <input type="text" placeholder="www.domain.com">
-                      </div>
-                      <div class="checkbox col-md-4">
-                        <label for="transport">Transport level Security</label>
-                        <input type="checkbox" class="side" name="http" id="http" checked>Http
-                        <span><input type="checkbox" class="side" name="https" id="https">Https</span>
-                      </div>
-                    </div>
-                  </form>
-                </div>
-                <div class="primary-btn">
-                  <span>
-                    <i class="far fa-save"></i>
-                    <input type="submit" value="Save">
-                  </span>
+        <div class="configure_blog">
+          <div class="configure_blog__main row ml-3 mt-4 mr-3">
+          <!-- code goes here-->
+          <div class="configure_blog_sect1__cont1 col-lg-8 ">
+            <div class="configure_blog_sect1__cont2">
+              <h2>Configure Blog Api</h2>
+              <p>This is a map of user data. It contains sign up information needed from the user before auth</p>
+              <div class="configure_blog_sect1__cont2__apigraph">
+                <h5>API Usage</h5>
+                <div class="configure_blog_sect1__cont2__apigraph__cont">
+                  <div class="apistatus"><div class="apistatus__dot"></div>Status</div>
+                  <div class="apistats"><div class="apistats__dot"></div>Stats</div>
+                  <div class="apigraph_cont"><canvas id="apigraph"></canvas>  </div>
                 </div>
               </div>
-              <div class="mini-screen col-md-3">
-                <div class="statistics">
-                  <h5>Statistics</h5>
-                  <p>Overall API Usage</p>
-                  <img src="../assets/img/pie.svg" alt="pie">
+              <form>
+                <div class="box">
+                  <label for="apiKey">API Key</label>
+                  <input type="text" placeholder="23pcei3434kef">
                 </div>
-  
-                <div class="documentation">
-                  <h5>Documentation</h5>
-                  <ul>
-                    <li><a href="#">Sign up with email</a></li>
-                    <li><a href="#">Sign in with facebook</a></li>
-                    <li><a href="#">Sign in with Google</a></li>
-                    <li><a href="#">Confirm password</a></li>
-                    <li><a href="#">Change password</a></li>
-                    <li><a href="#">Reset password</a></li>
-                    <li><a href="#">Confirm password</a></li>
-                    <li><a href="#">Reset password</a></li>
-                    <li><a href="#">View doc</a></li>
-                    <li><a href="#">Sign up with email</a></li>
-                  </ul>
+                <div class="box">
+                  <label for="baseId">Base ID</label>
+                  <input type="text" placeholder="94nfkkeo454nkf">
                 </div>
-  
-                <div class="primary-btn github">
-                  <a href="#">Open GitHub</a>
+                <div class="box">
+                  <label for="blogApi">Content Type</label>
+                  <input type="text" placeholder="Blog API">
                 </div>
-  
-                <div class="sample">
-                  <h4>Code sample</h4>
-  
-                  <h5>Select Language</h5>
-                  <select name="language" id="language">
-                    <option value="python">Python</option>
-                    <option value="java">Java</option>
-                    <option value="javascript">Javascript</option>
-                  </select>
-  
-                  <p>Easily download code samples of different programming languages</p>
-  
-                  <div>
-                    <span class="book">
-                      <i class="fas fa-book-open"></i>
-                      <a href="#">view sample</a>
-                    </span>
+                <div class="box">
+                  <label for="node">Node type</label>
+                  <input type="text" placeholder="Blog API">
+                </div>
+                <div class="row ml-0 mr-0 pl-0 pr-0">
+                  <div class="box_small box_small--modifier1">
+                    <label for="servers">Allowable Servers</label>
+                    <input type="text" placeholder="API Administrators">
                   </div>
-                  <hr>
-                  <div>
-                    <span class="download">
-                      <i class="fas fa-download"></i>
-                      <a href="#">Download</a>
-                    </span>
+                  <div class="box_small box_small--modifier2">
+                    <label for="service">Ajax Proxy Service</label>
+                    <input type="text" placeholder="www.domain.com">
                   </div>
-  
+                  <div class="box_small box_small--modifier3">
+                    <label for="token">API Token</label>
+                    <input type="text" placeholder="Blog API">
+                  </div>
+                  <div class="box_small box_small--modifier4">
+                    <label for="Authentication">Authentication</label>
+                    <input type="text" placeholder="Blog API">
+                  </div>
+                  <div class="box_small box_small--modifier5">
+                    <label for="Porthost">Port host</label>
+                    <input type="text" placeholder="www.domain.com">
+                  </div>
+                  <div class="check_box ">
+                    <label for="transport">Transport level Security</label>
+                      <div class="pretty p-icon">
+                        <input type="checkbox" />
+                        <div class="state">
+                          <i class="icon material-icons">done</i>
+                          <label><span class="spacer"></span>Http</label>
+                        </div>
+                      </div>
+                      <div class="pretty p-icon">
+                        <input type="checkbox" />
+                        <div class="state">
+                          <i class="icon material-icons">done</i>
+                          <label><span class="spacer"></span>Https</label>
+                        </div>
+                      </div>
+                  </div>
                 </div>
+              </form>
+              <div class="configure_blog_sect1__cont2__footer">
+                <a><i class="fas fa-save"></i>Save</a>
               </div>
             </div>
           </div>
+          <div class="configure_blog_sect2 col-lg-3 ml-3 mb-4">
+            <div class="configure_blog_sect2__pie">
+              <h4>Statistics</h4><hr>
+              <p>Overall API Usage</p>
+              <div class="pie_chart"><canvas id="pie"></canvas></div>
+            </div>
+            <div class="configure_blog_sect2__doc">
+              <h4>Documentation<i class="fas fa-search"></i></h4><hr>
+              <ul>
+                <li><a href="#">Sign up with email</a></li>
+                <li><a href="#">Sign in with facebook</a></li>
+                <li><a href="#">Sign in with Google</a></li>
+                <li><a href="#">Confirm password</a></li>
+                <li><a href="#">Change password</a></li>
+                <li><a href="#">Reset password</a></li>
+                <li><a href="#">Confirm password</a></li>
+                <li><a href="#">Reset password</a></li>
+              </ul>
+              <a class="view__doc"><i class="fas fa-file"></i>View doc</a>
+          </div>
+          <div class="configure_blog_sect2__git">
+            <a href="#">Open GitHub</a>
+          </div>
+          <div class="configure_blog_sect2__sample">
+            <h4>Code sample</h4><hr>
+            <p>Select Language</p>
+            <select name="language" id="language">
+              <option value="python">Python</option>
+              <option value="java">Java</option>
+              <option value="javascript">Javascript</option>
+            </select>
+            <h5>Easily download code sample of different programming languages</h5>
+            <a href="#"><i class="fas fa-book-open"></i>view sample</a><hr>
+            <a href="#"><i class="fas fa-download"></i>Download</a>
+          </div>
+        </div> 
         </div>
-
       </div>
     </div>
   </div>
@@ -232,8 +221,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
-  <script src="../assets/js/dashboard_sidebar.js"></script>
-  <script src="../assets/js/dashboard.js"></script>
+  <script src="{% static 'js/dashboard_sidebar.js' %}"></script>
+  <script src="{% static 'js/configure_api.js' %}"></script>
 </body>
-
 </html>
