--- a/templates/api_docs/comment_api/docs_base.html
+++ b/templates/api_docs/comment_api/docs_base.html
@@ -23,12 +23,12 @@
     <div class="container">
       <div class="row pt-4 pb-4 header__wrapper">
         <div class="col-lg-2 col-md-6 col-sm-6 logo__container">
-          <a href="{% url 'homepage' %}" class="logo"><img src="{% static 'img/logo.svg' %}" alt="site logo"></a>
+          <a href="{% url 'index' %}"  class="logo"><img src="{% static 'img/logo.svg' %}" alt="site logo"></a>
         </div>
 
         <nav class="col-lg-6">
 			  <ul class="nav__menu">
-			  <li><a href="{% url 'homepage' %}">Home</a></li>
+			  <li><a href="{% url 'index' %}" >Home</a></li>
 			  <li><a href="{% url 'about' %}">About us</a></li>
 			  <li><a href="{% url 'contact' %}">Contact us</a></li>
 			  <li><a href="{% url 'commentdocs' %}">Documentation</a></li>
@@ -59,7 +59,7 @@
               </div>
 
               <ul class="mobile__nav__menu">
-                <li><a href="{% url 'homepage' %}"><b>Home</b></a></li>
+                <li><a href="{% url 'index' %}" ><b>Home</b></a></li>
                 <li><a href="{% url 'about' %}"><b>About us</b></a></li>
                 <li><a href="{% url 'contact' %}"><b>Contact us</b></a></li>
                 <li><a href="{% url 'commentdocs' %}"><b>Documentation</b></a></li>
