--- a/static/assets/sass/pages/_signup.scss
+++ b/static/assets/sass/pages/_signup.scss
@@ -1,13 +1,21 @@
-// hr{
-//     position: relative; 
-//     border: none; 
-//     height: 2px; 
-//     background: $secondary-color; 
-//     margin-bottom: 25px; 
-//.signin_form{ 
-form{
+#sign_form{
     .google-btn{
         margin-bottom: 25px; 
+        button {
+            background: $secondary-color !important;
+            outline: none;
+            color: gray;
+            border: 1px solid #ced4da;
+            line-height: 20px;
+            &:hover{
+                box-shadow: -1px -2px 2px rgba(0, 0, 0, 0.1), 2px 2px 2px rgba(0, 0, 0, 0.1);
+            }
+            img{
+                width: 30px !important;
+                height: 30px !important;
+                margin-right: 15px;
+            }
+        }
     }
     .btn-block{
         padding:0.6em !important;
