--- a/templates/accounts/sign_in.html
+++ b/templates/accounts/sign_in.html
@@ -12,9 +12,9 @@
 	  	<div class="col-md-4 col-sm-12 col-lg-4 col-xs-4">	
 		  <h1 class="text-center"><strong>Sign In</strong></h1>
 		  <br>
-			<form action="/action_page.php">
+			<form action="/action_page.php" id="sign_form">
 				<div class="google-btn">
-					<button type="submit" class="primary-btn btn-block"><strong>G</strong> Continue with Google</button>
+					<button type="submit" class="btn-block"><img src="{% static 'img/google_logo.png' %}"/> Continue with Google</button>
 				</div>
 		     
 			  <div class="form-group">
