--- a/templates/user_dashboard/dashboard.html
+++ b/templates/user_dashboard/dashboard.html
@@ -98,11 +98,11 @@
             </div>
 
               <section id="container">
-                <article class="dropBox">
+                <article class="dropBox active-row">
                   
                   <!-- Single box -->
                   {% for context in object_list %}
-                  <div class="dragBox">
+                  <div class="dragBox active-box">
                     <div class="api__box">
                       <div class="api__box__shadow">
                         <div class="api__box__inner">
@@ -128,7 +128,7 @@
                             <a href="{% url 'configure_api' %}"><button class="primary-btn">Configure</button></a>
                             <!-- <input type="radio" name="" id=""> -->
                             <!-- success -->
-                            <div class="prindex.htmletty p-default p-round p-toggle">
+                            <div class="prindex.html pretty p-default p-round p-toggle">
                               <input type="checkbox" />
                               <div class="state p-success p-on">
                                   <label></label>
@@ -157,26 +157,44 @@
                   </div>
                 </div>
                 
-                <article class="dropBox">
+                <article class="dropBox inactive-row">
                   
                   <!-- Single box -->
-                  <div class="dragBox">
+                  <div class="dragBox inactive-box">
                     <div class="api__box">
                       <div class="api__box__shadow">
                         <div class="api__box__inner">
                           <div class="api__box__heading">
-                              <h5>Excel API</h5> 
+                            <h5>User API</h5>
+                            <!-- toggle -->
+                            <div class="pretty p-switch p-fill">
+                              <input type="checkbox" />
+                              <div class="state p-success">
+                                <label></label>
+                              </div>
+                            </div>
                           </div>
                           <div class="api__box__text">
-                            <small>Services give funtionality to implement comments</small>
+                            <small>For users</small>
                           </div>
                           <div class="api__box__stats">
-                            <p><br>
-                              <span></span>
+                            <p>Stats <br>
+                              <span>4/hr</span>
                             </p>
                           </div>
                           <div class="api__box__buttons">
-                            <a href="#"><button class="secondary-btn">+ Add API</button></a>
+                            <a href="{% url 'configure_api' %}"><button class="secondary-btn">+ Add API</button></a>
+                            <!-- <input type="radio" name="" id=""> -->
+                            <!-- success -->
+                            <div class="prindex.html pretty p-default p-round p-toggle">
+                              <input type="checkbox" />
+                              <div class="state p-success p-on">
+                                <label></label>
+                              </div>
+                              <div class="state p-danger p-off">
+                                <label></label>
+                              </div>
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -184,23 +202,41 @@
                   </div> <!-- Single box end -->
 
                   <!-- Single box -->
-                  <div class="dragBox">
+                  <div class="dragBox inactive-box">
                     <div class="api__box">
                       <div class="api__box__shadow">
                         <div class="api__box__inner">
                           <div class="api__box__heading">
-                              <h5>Print API</h5> 
+                            <h5>AWS API</h5>
+                            <!-- toggle -->
+                            <div class="pretty p-switch p-fill">
+                              <input type="checkbox" />
+                              <div class="state p-success">
+                                <label></label>
+                              </div>
+                            </div>
                           </div>
                           <div class="api__box__text">
-                            <small>Services give funtionality to implement comments</small>
+                            <small>To host</small>
                           </div>
                           <div class="api__box__stats">
-                            <p><br>
-                              <span></span>
+                            <p>Stats <br>
+                              <span>4/hr</span>
                             </p>
                           </div>
                           <div class="api__box__buttons">
-                            <a href="#"><button class="secondary-btn">+ Add API</button></a>
+                            <a href="{% url 'configure_api' %}"><button class="secondary-btn">+ Add API</button></a>
+                            <!-- <input type="radio" name="" id=""> -->
+                            <!-- success -->
+                            <div class="prindex.html pretty p-default p-round p-toggle">
+                              <input type="checkbox" />
+                              <div class="state p-success p-on">
+                                <label></label>
+                              </div>
+                              <div class="state p-danger p-off">
+                                <label></label>
+                              </div>
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -208,23 +244,41 @@
                   </div> <!-- Single box end -->
 
                   <!-- Single box -->
-                  <div class="dragBox">
+                  <div class="dragBox inactive-box">
                     <div class="api__box">
                       <div class="api__box__shadow">
                         <div class="api__box__inner">
                           <div class="api__box__heading">
-                              <h5>Socket API</h5> 
+                            <h5>Cert API</h5>
+                            <!-- toggle -->
+                            <div class="pretty p-switch p-fill">
+                              <input type="checkbox" />
+                              <div class="state p-success">
+                                <label></label>
+                              </div>
+                            </div>
                           </div>
                           <div class="api__box__text">
-                            <small>Services give funtionality to implement comments</small>
+                            <small>To print certificates</small>
                           </div>
                           <div class="api__box__stats">
-                            <p><br>
-                              <span></span>
+                            <p>Stats <br>
+                              <span>4/hr</span>
                             </p>
                           </div>
                           <div class="api__box__buttons">
-                            <a href="#"><button class="secondary-btn">+ Add API</button></a>
+                            <a href="{% url 'configure_api' %}"><button class="secondary-btn">+ Add API</button></a>
+                            <!-- <input type="radio" name="" id=""> -->
+                            <!-- success -->
+                            <div class="prindex.html pretty p-default p-round p-toggle">
+                              <input type="checkbox" />
+                              <div class="state p-success p-on">
+                                <label></label>
+                              </div>
+                              <div class="state p-danger p-off">
+                                <label></label>
+                              </div>
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -232,23 +286,41 @@
                   </div> <!-- Single box end -->
 
                   <!-- Single box -->
-                  <div class="dragBox">
+                  <div class="dragBox inactive-box">
                     <div class="api__box">
                       <div class="api__box__shadow">
                         <div class="api__box__inner">
                           <div class="api__box__heading">
-                              <h5>Feeds API</h5> 
+                            <h5>Receipt API</h5>
+                            <!-- toggle -->
+                            <div class="pretty p-switch p-fill">
+                              <input type="checkbox" />
+                              <div class="state p-success">
+                                <label></label>
+                              </div>
+                            </div>
                           </div>
                           <div class="api__box__text">
-                            <small>Services give funtionality to implement comments</small>
+                            <small>For business</small>
                           </div>
                           <div class="api__box__stats">
-                            <p><br>
-                              <span></span>
+                            <p>Stats <br>
+                              <span>4/hr</span>
                             </p>
                           </div>
                           <div class="api__box__buttons">
-                            <a href="#"><button class="secondary-btn">+ Add API</button></a>
+                            <a href="{% url 'configure_api' %}"><button class="secondary-btn">+ Add API</button></a>
+                            <!-- <input type="radio" name="" id=""> -->
+                            <!-- success -->
+                            <div class="prindex.html pretty p-default p-round p-toggle">
+                              <input type="checkbox" />
+                              <div class="state p-success p-on">
+                                <label></label>
+                              </div>
+                              <div class="state p-danger p-off">
+                                <label></label>
+                              </div>
+                            </div>
                           </div>
                         </div>
                       </div>
