--- a/static/assets/sass/pages/_signup.scss
+++ b/static/assets/sass/pages/_signup.scss
@@ -7,13 +7,14 @@
             color: gray;
             border: 1px solid #ced4da;
             line-height: 20px;
+            font-weight: bold;
             &:hover{
                 box-shadow: -1px -2px 2px rgba(0, 0, 0, 0.1), 2px 2px 2px rgba(0, 0, 0, 0.1);
             }
             img{
                 width: 30px !important;
                 height: 30px !important;
-                margin-right: 15px;
+                margin-right: 5px;
             }
         }
     }
@@ -30,6 +31,7 @@
     input{
         background-color: $secondary-color !important;
         border-radius: 0 !important;
+        padding-left: 3px;
     }
     ::placeholder{
         font-size: 14px !important;
