--- a/templates/accounts/sign_up.html
+++ b/templates/accounts/sign_up.html
@@ -41,7 +41,7 @@
           </div>
           <div class="form-group">
             <label for="pwd">PASSWORD</label>
-            <input type="password" class="form-control" value="" />
+            <input type="password" class="form-control" />
           </div>
           <button type="submit" class="btn btn-block tetiary-btn">
             Sign up
