implemented recover password views

--- a/templates/accounts/sign_in.html
+++ b/templates/accounts/sign_in.html
@@ -26,7 +26,7 @@
 			    <input type="password" class="form-control input"  value="">
 			  </div>
 			  <button type="submit" class="btn btn-block tetiary-btn">Sign in</button><br>
-			  <a href="recoverpasword.html" class="text-center">Forgot Password?</a>
+			  <a href="{% url 'recover_password' %}" class="text-center">Forgot Password?</a>
 			</form><br><br>
 	    </div>
 	</div>
